samples/_failures_safe/1761691290_3bbb3a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4510c7b8.c: In function ‘main’:
./samples/SAFE/__tmp_4510c7b8.c:135:5: error: expected declaration or statement at end of input
  135 |     size_t decompressed_size = sizeof(decompressed_data);
      |     ^~~~~~
